# assay-toolkit

./: .gitignore  PLATFORM_ARCHITECTURE.md  README.md  pyproject.toml  requirements.txt  scratch_assay_analysis.py  scratch_assay_gui.py
.github/workflows/: ci.yml
assay_platform/: __init__.py  core.py  registry.py  web_app.py
assay_platform/tools/: __init__.py  scratch_wound.py
assay_platform/tools/plate_reader/: README.md  __init__.py  exports.py  metrics.py  normalization.py  parser.py  pipeline.py  plate_map.py  stats.py
samples/: 0h A2 B_Plate_M_p00_0_A02f02d0.TIF  0h A4 B_Plate_M_p00_0_A04f00d0.TIF  0h B1 B_Plate_M_p00_0_B01f00d0.TIF  0h C3 B_Plate_M_p00_0_C03f01d0.TIF  0h C4 B_Plate_M_p00_0_C04f04d0.TIF  24h A2 B_Plate_M_p00_0_A02f02d0.TIF  24h A4 B_Plate_M_p00_0_A04f00d0.TIF  24h B1 B_Plate_M_p00_0_B01f00d0.TIF  24h C3 B_Plate_M_p00_0_C03f01d0.TIF  24h C4 B_Plate_M_p00_0_C04f04d0.TIF  dmso top 24hr_Plate_D_p00_0_A01f00d4.TIF
samples/plate_reader/: flex_like_sample.txt  sample_plate_map.csv
scripts/: start_dev_server.sh  stop_dev_server.sh
tests/: test_plate_reader.py
web/components/config/: tools-nav.js
web/components/layout/: AppShell.js  Sidebar.js
web/components/pages/: mount-plate-reader.js  mount-scratch.js
web/plate_reader/: index.html  plate_reader.css  plate_reader.js
web/static/: app.js  index.html  styles.css
