[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "assay-toolkit"
version = "0.1.0"
description = "Web platform for running translational assay analysis tools in the browser."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "opencv-python-headless>=4.8",
    "matplotlib>=3.7",
    "openpyxl>=3.1",
    "xlrd>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["assay_platform"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["assay_platform", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
